fix size of treemap so it doesn't overflow out of screen

--- a/src/renderer/styles.scss
+++ b/src/renderer/styles.scss
@@ -48,7 +48,7 @@ body {
 
 .Nav {
   background-color: $nav-color;
-  width: 25%;
+  width: 174px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -314,4 +314,10 @@ a {
 
 .selected {
   color: rgba(255, 255, 255, 1);
+}
+
+#logoContainer {
+  height: 172px;
+  width: 172px;
+  border: solid 1px white;
 }
